# fantasy_dragon

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
asset/graphic/: hsnr64.xcf  pallette.xcf
asset/gui/: form.txt
asset/map/: pilz  rofl.json  testmap1
ports/sdl3-mixer/: portfile.cmake  vcpkg.json
src/FantasyDragon/: enemy.cpp  enemy.hpp  fantasydragon_mapeditor.cpp  fantasydragon_mapeditor.hpp  main.cpp  player.cpp  player.hpp
src/example/: mini.cpp  mini.hpp  pong.cpp
src/example/game/: camerastate.cpp  example_game.cpp  example_game.hpp  introstate.cpp  mapeditor.cpp  mapeditor.hpp  plasmastate.cpp  roflstate.cpp  roflstate.hpp  shooterstate.cpp  simpleeditor.cpp  simpleeditor.hpp  sortstate.cpp  tgui.cpp  tgui.hpp
src/hsnr64/: offset.hpp  palette.hpp  tilefont.cpp  tiles.cpp  tiles.hpp
src/sor/: adapt_sdl_imgui.hpp  core.hpp  sdl_core.hpp  sdl_game.cpp  sdl_game.hpp  sdl_shapeops.hpp  sdl_smartptr.hpp  smartptr.hpp
